--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Elise Pourtois">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>CV • Elise Pourtois</title>
 </head>
 <body>
@@ -124,46 +125,89 @@
     <!-- Expérience -->
     <section id="experience" class="my-5">
         <div class="container">
-            <h2>Mon expérience</h2>
+            <h2 class="pb-5">Mon expérience</h2>
+            <!-- PointCulture -->
+            <div class="row pb-2">
+                <div class="col">
+                    <div class="pb-2">
+                        <h3 class="fw-normal">Médiatrice chargée de projet</h3>
+                        <h4 class="fw-light">PointCulture asbl • janv. 2020 - oct. 2021</h4>
+                        <a class="fs-5" data-bs-toggle="collapse" href="#collapsePC"><i class="bi bi-three-dots text-primary"></i></a>
+                    </div>
+                    <div class="collapse" id="collapsePC">
+                        <div class="card card-body border-0 fw-light">
+                            <ul class="list-unstyled fs-5">
+                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Coordination des évènements et des partenariats pour le PointCulture Louvain-la-Neuve</li>
+                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu pour les réseaux sociaux et le site web</li>
+                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Animation d'ateliers créatifs parents-enfants</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- NBBMuseum -->
+            <div class="row">
+                <div class="col">
+                    <div class="pb-2">
+                        <h3 class="fw-normal">Animatrice pédagogique</h3>
+                        <h4 class="fw-light">Musée de la Banque nationale de Belgique • déc. 2017 - nov. 2019</h4>
+                        <a class="fs-5" data-bs-toggle="collapse" href="#collapsePC"><i class="bi bi-three-dots text-primary"></i></a>
+                    </div>
+                    <div class="collapse" id="collapsePC">
+                        <div class="card card-body border-0 fw-light">
+                            <ul class="list-unstyled fs-5">
+                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Coordination des évènements et des partenariats pour le PointCulture Louvain-la-Neuve</li>
+                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu pour les réseaux sociaux et le site web</li>
+                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Animation d'ateliers créatifs parents-enfants</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Formation -->
-    <section id="formation" class="my-5">
+    <section id="formation" class="py-5 bg-light">
         <div class="container">
-            <h2>Ma formation</h2>
+            <h2 class="pb-5">Ma formation</h2>
         </div>
     </section>
 
     <!-- Hobbies -->
-    <section id="hobbies" class="my-5">
+    <section id="hobbies" class="py-5">
         <div class="container">
-            <h2>Mes hobbies</h2>
-            <div class="row">
-                <div class="col">
-                    <div>
-                        <img src="./assets/img/icon/yoga.png" alt="Yoga">
+            <h2 class="pb-5">Mes hobbies</h2>
+            <div class="row pb-5 d-flex justify-content-between">
+                <div class="col-2">
+                    <div class="bg-light p-3 rounded-circle">
+                        <img src="./assets/img/icon/yoga.png" alt="Yoga" class="w-100">
                     </div>
+                    <!-- <img src="./assets/img/icon/yoga.png" alt="Yoga"> -->
                 </div>
-                <div class="col">
-                    <div>
-                        <img src="./assets/img/icon/aiguille.png" alt="Couture">
+                <div class="col-2">
+                    <div class="bg-light p-3 rounded-circle">
+                        <img src="./assets/img/icon/aiguille.png" alt="Couture" class="w-100">
                     </div>
+                    <!-- <img src="./assets/img/icon/aiguille.png" alt="Couture"> -->
                 </div>
-                <div class="col">
-                    <div>
-                        <img src="./assets/img/icon/livre.png" alt="Lecture">
+                <div class="col-2">
+                    <div class="bg-light p-3 rounded-circle">
+                        <img src="./assets/img/icon/livre.png" alt="Lecture" class="w-100">
                     </div>
+                    <!-- <img src="./assets/img/icon/livre.png" alt="Lecture"> -->
                 </div>
-                <div class="col">
-                    <div>
-                        <img src="./assets/img/icon/palettepeinture.png" alt="Art">
+                <div class="col-2">
+                    <div class="bg-light p-3 rounded-circle">
+                        <img src="./assets/img/icon/palettepeinture.png" alt="Art" class="w-100">
                     </div>
+                    <!-- <img src="./assets/img/icon/palettepeinture.png" alt="Art"> -->
                 </div>
-                <div class="col">
-                    <div>
-                        <img src="./assets/img/icon/maison.png" alt="Maison">
+                <div class="col-2">
+                    <div class="bg-light p-3 rounded-circle">
+                        <img src="./assets/img/icon/maison.png" alt="Maison" class="w-100">
                     </div>
+                    <!-- <img src="./assets/img/icon/maison.png" alt="Maison"> -->
                 </div>
             </div>
         </div>
