fix problems with timeline in experience part

--- a/index.html
+++ b/index.html
@@ -128,17 +128,38 @@
             <h2 class="pb-5">Mon expérience</h2>
 
             <div class="row">
-                <div class="timeline">
-                    <!-- BeCode -->
-                   <div class="timeline-box">
-                       <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
-                       <div class="timeline-content">
-                            <div class="pb-2">
-                                <h3 class="fw-light">Junior Web Developer</h3>
-                                <h4 class="fw-light fs-5">BeCode • fév. 2022 - août 2022</h4>
-                                <!-- <a class="fs-5" data-bs-toggle="collapse" href="#collapsePC"><i class="bi bi-plus text-primary text-opacity-75"></i></a> -->
-                            </div>
-                            <!-- <div class="collapse" id="collapsePC">
+                <div class="col">
+                    <div class="timeline">
+                        <!-- BeCode -->
+                       <div class="timeline-box">
+                           <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
+                           <div class="timeline-content">
+                                <div class="pb-2">
+                                    <h3 class="fw-light">Junior Web Developer</h3>
+                                    <h4 class="fw-light fs-5">BeCode • fév. 2022 - août 2022</h4>
+                                    <!-- <a class="fs-5" data-bs-toggle="collapse" href="#collapsePC"><i class="bi bi-plus text-primary text-opacity-75"></i></a> -->
+                                </div>
+                                <!-- <div class="collapse" id="collapsePC">
+                                        <div class="card card-body border-0 fw-light">
+                                            <ul class="list-unstyled fs-6">
+                                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Coordination des évènements et des partenariats pour le PointCulture Louvain-la-Neuve</li>
+                                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu pour les réseaux sociaux et le site web</li>
+                                                <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Animation d'ateliers créatifs parents-enfants</li>
+                                            </ul>
+                                        </div>
+                                </div> -->
+                           </div>
+                       </div> 
+                       <!-- PointCulture -->
+                       <div class="timeline-box">
+                            <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
+                            <div class="timeline-content">
+                                <div class="pb-2">
+                                    <h3 class="fw-light">Médiatrice chargée de projet</h3>
+                                    <h4 class="fw-light fs-5">PointCulture asbl • janv. 2020 - oct. 2021</h4>
+                                    <a class="fs-5" data-bs-toggle="collapse" href="#collapsePC"><i class="bi bi-plus text-secondary text-opacity-75"></i></a>
+                                </div>
+                                <div class="collapse" id="collapsePC">
                                     <div class="card card-body border-0 fw-light">
                                         <ul class="list-unstyled fs-6">
                                             <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Coordination des évènements et des partenariats pour le PointCulture Louvain-la-Neuve</li>
@@ -146,88 +167,69 @@
                                             <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Animation d'ateliers créatifs parents-enfants</li>
                                         </ul>
                                     </div>
-                            </div> -->
+                                </div>
+                            </div>
                        </div>
-                   </div> 
-                   <!-- PointCulture -->
-                   <div class="timeline-box">
-                        <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
-                        <div class="timeline-content">
-                            <div class="pb-2">
-                                <h3 class="fw-light">Médiatrice chargée de projet</h3>
-                                <h4 class="fw-light fs-5">PointCulture asbl • janv. 2020 - oct. 2021</h4>
-                                <a class="fs-5" data-bs-toggle="collapse" href="#collapsePC"><i class="bi bi-plus text-secondary text-opacity-75"></i></a>
-                            </div>
-                            <div class="collapse" id="collapsePC">
-                                <div class="card card-body border-0 fw-light">
-                                    <ul class="list-unstyled fs-6">
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Coordination des évènements et des partenariats pour le PointCulture Louvain-la-Neuve</li>
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu pour les réseaux sociaux et le site web</li>
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Animation d'ateliers créatifs parents-enfants</li>
-                                    </ul>
+                       <!-- NBBMuseum -->
+                       <div class="timeline-box">
+                            <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
+                            <div class="timeline-content">
+                                <div class="pb-2">
+                                    <h3 class="fw-light">Animatrice pédagogique</h3>
+                                    <h4 class="fw-light fs-5">Musée de la Banque nationale de Belgique • déc. 2017 - nov. 2019</h4>
+                                    <a class="fs-5" data-bs-toggle="collapse" href="#collapseNBB"><i class="bi bi-plus text-secondary text-opacity-75"></i></a>
+                                </div>
+                                <div class="collapse" id="collapseNBB">
+                                    <div class="card card-body border-0 fw-light">
+                                        <ul class="list-unstyled fs-6">
+                                            <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Visites guidées à destination d'un public varié</li>
+                                            <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Réalisation d'outils pédagogiques</li>
+                                            <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Organisation et promotion des activités ponctuelles</li>
+                                            <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu pour les réseaux sociaux et le site web</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                   </div>
-                   <!-- NBBMuseum -->
-                   <div class="timeline-box">
-                        <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
-                        <div class="timeline-content">
-                            <div class="pb-2">
-                                <h3 class="fw-light">Animatrice pédagogique</h3>
-                                <h4 class="fw-light fs-5">Musée de la Banque nationale de Belgique • déc. 2017 - nov. 2019</h4>
-                                <a class="fs-5" data-bs-toggle="collapse" href="#collapseNBB"><i class="bi bi-plus text-secondary text-opacity-75"></i></a>
-                            </div>
-                            <div class="collapse" id="collapseNBB">
-                                <div class="card card-body border-0 fw-light">
-                                    <ul class="list-unstyled fs-6">
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Visites guidées à destination d'un public varié</li>
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Réalisation d'outils pédagogiques</li>
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Organisation et promotion des activités ponctuelles</li>
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu pour les réseaux sociaux et le site web</li>
-                                    </ul>
+                       </div>
+                       <!-- Ville BXL -->
+                       <div class="timeline-box">
+                            <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
+                            <div class="timeline-content">
+                                <div class="pb-2">
+                                    <h3 class="fw-light">Assitante communication<span class="fw-lighter fs-5"> (stage)</span></h3>
+                                    <h4 class="fw-light fs-5">Service Culture de la Ville de Bruxelles • avril - juil. 2017</h4>
+                                    <a class="fs-5" data-bs-toggle="collapse" href="#collapseBXL"><i class="bi bi-plus text-secondary text-opacity-75"></i></a>
+                                </div>
+                                <div class="collapse" id="collapseBXL">
+                                    <div class="card card-body border-0 fw-light">
+                                        <ul class="list-unstyled fs-6">
+                                            <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu autour de la dentelle de Bruxelles pour le Musée Mode & Dentelle</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                   </div>
-                   <!-- Ville BXL -->
-                   <div class="timeline-box">
-                        <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
-                        <div class="timeline-content">
-                            <div class="pb-2">
-                                <h3 class="fw-light">Assitante communication<span class="fw-lighter fs-5"> (stage)</span></h3>
-                                <h4 class="fw-light fs-5">Service Culture de la Ville de Bruxelles • avril - juil. 2017</h4>
-                                <a class="fs-5" data-bs-toggle="collapse" href="#collapseBXL"><i class="bi bi-plus text-secondary text-opacity-75"></i></a>
-                            </div>
-                            <div class="collapse" id="collapseBXL">
-                                <div class="card card-body border-0 fw-light">
-                                    <ul class="list-unstyled fs-6">
-                                        <li><span class="text-primary"><i class="bi bi-arrow-right"></i></span> Création de contenu autour de la dentelle de Bruxelles pour le Musée Mode & Dentelle</li>
-                                    </ul>
+                       </div>
+                       <!-- Musée L -->
+                       <div class="timeline-box">
+                            <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
+                            <div class="timeline-content">
+                                <div class="pb-2">
+                                    <h3 class="fw-light">Réceptionniste accueil<span class="fw-lighter fs-5"> (job étudiant)</span></h3>
+                                    <h4 class="fw-light fs-5">Musée L • juil. 2013 - août 2015</h4>
                                 </div>
                             </div>
-                        </div>
-                   </div>
-                   <!-- Musée L -->
-                   <div class="timeline-box">
-                        <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
-                        <div class="timeline-content">
-                            <div class="pb-2">
-                                <h3 class="fw-light">Réceptionniste accueil<span class="fw-lighter fs-5"> (job étudiant)</span></h3>
-                                <h4 class="fw-light fs-5">Musée L • juil. 2013 - août 2015</h4>
+                       </div>
+                       <!-- BNP -->
+                       <div class="timeline-box">
+                            <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
+                            <div class="timeline-content">
+                                <div class="pb-2">
+                                    <h3 class="fw-light">Employée administrative<span class="fw-lighter fs-5"> (job étudiant)</span></h3>
+                                    <h4 class="fw-light fs-5">BNP Paribas Fortis • juil. 2011</h4>
+                                </div>
                             </div>
-                        </div>
-                   </div>
-                   <!-- BNP -->
-                   <div class="timeline-box">
-                        <div class="timeline-icon"><span class="text-primary"><i class="bi bi-circle-fill"></i></span></div>
-                        <div class="timeline-content">
-                            <div class="pb-2">
-                                <h3 class="fw-light">Employée administrative<span class="fw-lighter fs-5"> (job étudiant)</span></h3>
-                                <h4 class="fw-light fs-5">BNP Paribas Fortis • juil. 2011</h4>
-                            </div>
-                        </div>
-                   </div>
+                       </div>
+                    </div>
                 </div>
             </div>
 
